test/libsolidity/syntaxTests/circular_reference_new_in_ctor.sol
contract C {
	constructor() { new C(); }
}
// ----
// TypeError 7813: (30-35): Circular reference found.
